TimeManager | Final Version

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="icon" href="icon.ico" />
     <link rel="stylesheet" href="index.css" />
-    <title>Time Manager</title>
+    <title>TimyManager</title>
   </head>
   <body>
     <div id="root"></div>
